--- a/portfolio.css
+++ b/portfolio.css
@@ -15,3 +15,19 @@ h1{
 a,p{
   font-family: 'Open Sans Condensed', sans-serif;
 }
+
+.btn{
+ border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
+  margin-right: 20px;
+}
+.btn:hover {
+  background-color: #ddd;
+}
+.btn.active {
+  background-color: #666;
+   color: white;
+}
