--- a/portfolio.css
+++ b/portfolio.css
@@ -1,23 +1,31 @@
-body{
-  background-color:darkgray;
-}
+/* body{
+  background-color:white;
+} */
 
-img{
+/* img{
   width:400px;
   margin-left:30%;
-}
-h1{
-  font-family: 'Open Sans Condensed', sans-serif;
+} */
+/* h1{
+  font-family: Raleway;
   text-align:center;
   background-color:darksalmon;
   border:5px solid white;
+} */
+.heading{
+  font-family:Raleway;
+  background-color: #373738;
+  border:5px solid white;
+  color: #efeff2;
+  padding: 1em;
+  
 }
 a,p{
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: Raleway;
 }
 
 .btn{
- border: none;
+  border: none;
   outline: none;
   padding: 12px 16px;
   background-color: white;
@@ -30,4 +38,13 @@ a,p{
 .btn.active {
   background-color: #666;
    color: white;
+}
+.main{
+  max-width: 1000px;
+  margin: auto;
+}
+nav{
+  background-color: #272b30;
+  padding: 10px;
+  border-radius: 10px;
 }
